--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,46 @@ body {
     height: 97vh;
 }
 
+h1 {
+    font-size: 4vh;
+}
+
 .interface {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 canvas {
     border: 6px solid #000000;
     border-radius: 6px;
 }
+
+.side {
+    height: 82vh;
+    width: 20vh;
+    background: #475569;
+    color: white;
+    border: none;
+
+    margin: 0vh 7vh;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.reserve {
+    display: none;
+    height: 10vh;
+    width: 90vw;
+    background: #475569;
+    color: white;
+    border: none;
+
+    margin: 2vh;
+    font-size: 18px;
+    cursor: pointer;
+}
+
 
 
 /*
