--- a/Checkout/checkout.css
+++ b/Checkout/checkout.css
@@ -1,87 +1,57 @@
 body {
     background: rgb(190,190,190);
     font: 'verdana' sans-serif;
-    height: 97vh;
+    height: 200vh;
 }
 
-h1 {
-    font-size: 5vh;
-}
-
-.interface {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-canvas {
-    border: 6px solid #000000;
-    border-radius: 6px;
-}
-
-.side {
-    height: 82vh;
-    width: 20vh;
-    background: #475569;
-    color: white;
-    border: none;
-
-    margin: 0vh 2vh;
-    font-size: 18px;
-    cursor: pointer;
-}
-
-.sideR {
-    height: 75vh;
-    width: 20vh;
-    background: #475569;
-    color: white;
-    border: none;
-
-    margin: 0vh 2vh;
-    font-size: 18px;
-    cursor: pointer;
-}
-
-.reserve {
-    display: none;
+#increase {
     height: 10vh;
-    width: 90vw;
-    background: #475569;
-    color: white;
-    border: none;
-
-    margin: 2vh;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.date-bar {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-    gap: 15px;
-}
-
-.date-input {
-    padding: 12px 16px;
-    border: 1px solid #cbd5e0;
+    width: 10vh;
+    background: rgb(190,190,190);
+    color: black;
+    border: 1px solid rgb(190,190,190);
     border-radius: 6px;
-    font-size: 16px;
-    background-color: white;
-    color: #2c3e50;
+
+    margin: 0vh 2vh;
+    font-size: 50px;
     cursor: pointer;
-    transition: all 0.2s ease;
 }
 
-.date-input:hover {
-    border-color: #94a3b8;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+#decrease {
+    height: 10vh;
+    width: 10vh;
+    background: rgb(190,190,190);
+    color: black;
+    border: 1px solid rgb(190,190,190);
+    border-radius: 6px;
+
+    margin: 0vh 2vh;
+    font-size: 50px;
+    cursor: pointer;
 }
 
-.date-input:focus {
-    border-color: #475569;
-    box-shadow: 0 2px 8px rgba(71, 85, 105, 0.1);
-    outline: none;
+#deerCaught {
+    height: 10vh;
+    width: 10vh;
+    background: rgb(190,190,190);
+    color: black;
+    border: 1px solid rgb(190,190,190);
+    border-radius: 6px;
+
+    margin: 0vh 2vh;
+    font-size: 50px;
+    cursor: pointer;
 }
 
+#deerTitle {
+   height: 10vh;
+    width: 10vh;
+    background: rgb(190,190,190);
+    color: black;
+    border: 1px solid rgb(190,190,190);
+    border-radius: 6px;
+
+    margin: 0vh 2vh;
+    font-size: 20px;
+    cursor: pointer; 
+}
